<resources>
    <string name="app_name">Garden Birds Quiz</string>

    <!-- Species -->
    <string name="GreatTit">Great tit</string>
    <string name="Nuthach">Nuthatch</string>
    <string name="Finch">Chaffinch</string>
    <string name="Goldfinch">Goldfinch</string>
    <string name="Bluetit">Blue tit</string>
    <string name="Blackbird">Blackbird</string>
    <string name="Robbin">Robbin</string>
    <string name="Starling">Starling</string>

    <!-- editText -->
    <string name="editSuggestion">Enter suggestion here</string>
    <string name="editTextRightAnswer">Turdus merula</string>
    <string name="editTextRightAnswer2">turdus merula</string>

    <!-- First activity -->
    <string name="Welcome">Welcome to the Garden Birds of Europe Quiz!</string>
    <string name="ByPicture">Start the Quiz!</string>

    <!-- Questions -->
    <string name="Question_1">Q1: Which is the bird?</string>
    <string name="Question_2">Q2: Which is the bird?</string>
    <string name="Question_3">Q3: Which is the bird?</string>
    <string name="Question_4">Q4: Which bird species are presented on the picture?</string>
    <string name="Question_5">Q5: What is the name of that bird in latin?</string>


    <!-- Toasts -->
    <string name="blank_question">You have to answer to all questions from 1 to 3!</string>
    <string name="result_summery">Your score is: </string>
    <string name="wrong_answer">This answer is wrong!</string>

    <!-- Buttons -->
    <string name="info_button">info</string>
    <string name="submit_button">submit</string>
    <string name="reset_button">reset</string>
    <string name="java_reset_alert">Do you want to try again?</string>
    <string name="title_reset_java">Reset</string>

    <!-- Rules -->
    <string name="title_rules_java">Greetings!</string>
    <string name="info_list1"> This quiz presets you several questions related with recognizing common
        birds that you can see in your garden if you live in Europe!</string>
    <string name="info_list2">Rules:</string>
    <string name="info_list3">1. You must answer to questions 1-3! You get one point for every
        right answer.</string>
    <string name="info_list4">2. Question 4 have 2 right answers! Each right answer
        gives you 1 point and each wrong brings -1!</string>
    <string name="info_list5">3. Question 5 requires the name of the species in Latin language!
        This question gives you 3 points.</string>
    <string name="info_list6">If you answer right to all the questions you can collect 8 points.</string>
    <string name="info_list7">Good luck!</string>

</resources>
