<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

<LinearLayout
    style="@style/Linear_layout"
    android:orientation="vertical"
    tools:context="com.example.android.gardenbirdsquiz.quiz_activity">

    <!-- First question -->
    <TextView
        style="@style/TextView_question"
        android:text="@string/Question_1"/>

    <ImageView
        style="@style/Image"
        android:src="@drawable/goldfinch"/>

   <RadioGroup
       android:id="@+id/firstQuestion"
       style="@style/QuestionStyle">

       <RadioButton
           android:id="@+id/question1answer1"
           style="@style/QuestionStyle"
           android:text="@string/Finch"
           />
       <RadioButton
           android:id="@+id/question1answer2"
           style="@style/QuestionStyle"
           android:text="@string/GreatTit"
           />
       <RadioButton
           android:id="@+id/question1answer3"
           style="@style/QuestionStyle"
           android:text="@string/Goldfinch"
           />
       <RadioButton
           android:id="@+id/question1answer4"
           style="@style/QuestionStyle"
           android:text="@string/Nuthach"
           />

   </RadioGroup>

    <!-- Second question -->
    <TextView
        style="@style/TextView_question"
        android:text="@string/Question_2"/>

    <ImageView
        android:src="@drawable/bluetit"
        style="@style/Image" />

    <RadioGroup
        android:id="@+id/secondQuestion"
        style="@style/QuestionStyle">

        <RadioButton
            android:id="@+id/question2answer1"
            style="@style/QuestionStyle"
            android:text="@string/Blackbird"
            />
        <RadioButton
            android:id="@+id/question2answer2"
            style="@style/QuestionStyle"
            android:text="@string/Bluetit"
            />
        <RadioButton
            android:id="@+id/question2answer3"
            style="@style/QuestionStyle"
            android:text="@string/Goldfinch"
            />
        <RadioButton
            android:id="@+id/question2answer4"
            style="@style/QuestionStyle"
            android:text="@string/Starling"

            />
    </RadioGroup>

    <!-- Question 3 -->
    <TextView
        style="@style/TextView_question"
        android:text="@string/Question_3"/>

    <ImageView
        android:src="@drawable/greattit"
        style="@style/Image" />

    <RadioGroup
        android:id="@+id/thirdQuestion"
        style="@style/QuestionStyle">

        <RadioButton
            android:id="@+id/question3answer1"
            style="@style/QuestionStyle"
            android:text="@string/GreatTit"
            />
        <RadioButton
            android:id="@+id/question3answer2"
            style="@style/QuestionStyle"
            android:text="@string/Goldfinch"
            />
        <RadioButton
            android:id="@+id/question3answer3"
            style="@style/QuestionStyle"
            android:text="@string/Nuthach"
            />
        <RadioButton
            android:id="@+id/question3answer4"
            style="@style/QuestionStyle"
            android:text="@string/Starling"
            />
    </RadioGroup>
<!-- Question 4 -->
    <TextView
        style="@style/TextView_question"
        android:text="@string/Question_4"/>

    <ImageView
        android:src="@drawable/chaffinch_robbin"
        style="@style/Image" />

    <CheckBox
        android:id="@+id/question4answer1"
        style="@style/QuestionStyle"
        android:text="@string/Robbin"
        />
    <CheckBox
        android:id="@+id/question4answer2"
        style="@style/QuestionStyle"
        android:text="@string/Bluetit"
        />
    <CheckBox
        android:id="@+id/question4answer3"
        style="@style/QuestionStyle"
        android:text="@string/Finch"
        />
    <CheckBox
        android:id="@+id/question4answer4"
        style="@style/QuestionStyle"
        android:text="@string/Nuthach"
        />
<!-- Question 5 -->
    <TextView
        style="@style/TextView_question"
        android:text="@string/Question_5"/>

    <ImageView
        android:src="@drawable/blackbird"
        style="@style/Image" />

    <EditText
        android:id="@+id/question5answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editSuggestion"/>

<!-- Submit part -->
    <RelativeLayout style="@style/Linear_layout">

        <Button
            android:id="@+id/submit"
            style="@style/button"
            android:layout_alignParentLeft="true"
            android:onClick="submitAnswer"
            android:text="@string/submit_button" />

        <Button
            android:id="@+id/reset_button"
            style="@style/button"
            android:layout_centerInParent="true"
            android:onClick="reset"
            android:text="@string/reset_button" />

        <Button
            style="@style/button"
            android:layout_alignParentRight="true"
            android:onClick="info"
            android:text="@string/info_button"/>

    </RelativeLayout>
</LinearLayout>
</ScrollView>
